<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#284E6D">

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:padding="20sp"
        android:text="@string/question1"
        android:textColor="#D3E6E6"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="128dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/option1"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:background="@drawable/custom_button"
            android:gravity="center_vertical"
            android:text="@string/answer1_1"
            android:textColor="#CCD4E4" />

        <Button
            android:id="@+id/option2"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:background="@drawable/custom_button"
            android:gravity="center_vertical"
            android:text="@string/answer1"
            android:textColor="#CCD4E4" />

        <Button
            android:id="@+id/option3"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:background="@drawable/custom_button"
            android:gravity="center_vertical"
            android:text="@string/answer1_3"
            android:textColor="#CCD4E4" />

        <Button
            android:id="@+id/option4"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:background="@drawable/custom_button"
            android:gravity="center_vertical"
            android:text="@string/answer1_4"
            android:textColor="#CCD4E4" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/next_button"
        android:layout_width="51dp"
        android:layout_height="44dp"
        android:layout_marginBottom="52dp"
        android:background="@drawable/baseline_navigate_next_white_18dp"
        android:contentDescription="@string/next_quest"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.738"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/previous_button"
        android:layout_width="51dp"
        android:layout_height="44dp"
        android:layout_marginBottom="52dp"
        android:background="@drawable/baseline_navigate_before_white_18dp"
        android:contentDescription="@string/previous_quest"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/next_button"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:fontFamily="serif"
        android:padding="10sp"
        android:text="@string/title"
        android:textColor="#A9BDD6"
        android:textSize="80sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>